--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "husky": "^9.0.11",
     "lint-staged": "^15.2.5",
     "prettier": "^3.3.1",
+    "react-detect-offline": "^2.4.5",
     "react-responsive": "^10.0.0",
     "swiper": "^11.1.4"
   },
