--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.0",
+    "lodash.debounce": "^4.0.8",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
+    "@emotion/react": "^11.11.4",
+    "@mui/material": "^5.15.19",
     "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
