--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.18.0",
     "lodash.debounce": "^4.0.8",
+    "node-fetch": "^2.7.0",
     "react": "^18.3.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
@@ -45,6 +46,7 @@
   "devDependencies": {
     "@emotion/react": "^11.11.4",
     "@mui/material": "^5.15.19",
+    "axios": "^1.7.2",
     "date-fns": "^3.6.0",
     "eslint": "^8.57.0",
     "eslint-config-airbnb": "^19.0.4",
